--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mochawesome": "^3.0.2",
     "mochawesome-report-generator": "^3.1.3",
     "pify": "^3.0.0",
-    "truffle-assertions": "^0.3.1"
+    "truffle-assertions": "^0.3.1",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {},
   "scripts": {
